Added sw-dev specific questions and improved califications algorythm

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,9 +6,13 @@
 }
 
 .text-warning{
-  color: yellow;
+  color: #f0ad4e;
 }
 
 .text-success{
   color: green;
+}
+
+.underline{
+  text-decoration: underline;
 }
