--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -19,7 +19,7 @@
                 </thead>
                 <tbody>
                   <% @subject.users.each do |user| %>
-                    <tr class="<%= student?(user) ? student_status(user) : "" %>" >
+                    <tr class="<%= student?(user) ? average_status(user) : "" %>" >
                       <td><%= user.names %> <%= user.last_names %></td>
                       <td><%= user.code %></td>
                       <td><%= user.role != "teacher" ? "Estudiante" : "Profesor" %></td>
@@ -93,6 +93,8 @@
       </div>
       <%= link_to subject_panel_path @subject do %>
         <button class="btn btn-large"> Panel de calificaciones</button>
+        <br>
+        <br>
       <% end %>
     <% end %>
   </div>
